// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $47.47
  </p>
</div>
`;

exports[`should correctly render ExpenseSummary with 2 expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $47.47
  </p>
</div>
`;
